--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.3.1",
     "eslint": "^8.43.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   }
 }
