--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "csv": "^6.3.1"
   }
 }
